--- a/src/main/index.html
+++ b/src/main/index.html
@@ -31,7 +31,7 @@
         arguments))},b[f].l=1*new Date,b[f].apikey=d.apikey,b[f].dataLayerName=d.dataLayerName;var c=
         a.cookie.match('(^|; )'+e+'=([^;]*)'),g=location.search.match('[?&]'+e+'=([^&]*)'),h=g?g[1]:c?c[2]:
         'p';d.settings_tolerance>0&&(setTimeout(this.finish,d.settings_tolerance),this.hideBody());var i=(
-        d.scriptsHostname||'//scripts.persoo.cz/')+d.apikey+'/'+h;this.loadScript(i+'/actions.js'),
+        d.scriptsHostname||'http://scripts.persoo.cz/')+d.apikey+'/'+h;this.loadScript(i+'/actions.js'),
         this.loadScript(i+'/persoo.js')}}}(document,window,!1,persooConfig,'persooEnvironment');persooLoader.init();
     </script>
     
@@ -59,6 +59,12 @@
                    <li><a href="../solutions/">Solutions</a> - solved excersices, which you can use as demos, to see how persoo works.
                    </li>
                 </ul>
+                </p>
+                
+                <p>If you want to set Persoo accountID (apikey) for all demos/excercises, 
+                do it in file "globalConfig.js" and use javascript variable "persooAccountID" which is available in all demos.
+                More over, to make demos work on localhost with file:// protocol, change in persoo snippets "//scripts.persoo.cz/" to "http://scripts.persoo.cz/".
+                (In production, persoo uses the same protocol as displayed page, i.e. both http:// and https://, but file:// protocol will not find persoo resources).
                 </p>
 
                 <h2>In all examples you can use</h2>
