--- a/src/main/eshop/detail.html
+++ b/src/main/eshop/detail.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- jQuery + Twitter Bootstrap + Persoo Playground Navigations + etc -->
     <script src="../globalConfig.js" type="text/javascript"></script>
+    <link href="../img/favicon.png" rel="icon" type="image/png">
     <link href="../../common/persoo-demo-all.css" rel="stylesheet" media="screen">
     <script src="../../common/persoo-demo-all.js" type="text/javascript"></script>
 
@@ -20,7 +21,7 @@
             settings_tolerance: 2000,  // for loading persoo.js
             personalizations_tolerance: 2500,    // for showing personalizations
         };
-    
+
         /*! Persoo js client 2015-03-16 */
         var persooLoader=function(a,b,c,d,e){var f=d.persooName,g='_persoo_hide_body';return{hideBody:
         function(){var b=a.createElement('style'),c='body{opacity:0 !important;filter:alpha(opacity=0)'
@@ -41,7 +42,7 @@
         var itemID = decodeURI(QueryString.product);
         //productsDB.getCategoryTree(showCategoryTree);
         productsDB.getProducts([itemID], showProductDetail);
-    </script>    
+    </script>
 </head>
 <body>
     <div class="container-fluid">
@@ -52,14 +53,14 @@
             <div class="col-md-10">
                 <!--Body content-->
 			    <h1>Products preview - detail</h1>
-		
+
 		        <div id="basketStatus"></div>
 		        <script>showBasketStatus();</script>
 
-                <div id="category-tree"></div>			  
+                <div id="category-tree"></div>
 			    <div id="box-detail"></div>
 			    <div class="clear"></div>
-			  
+
 			    <!--   for recommendations -->
 			    <div id="box1"></div>
 			    <div id="box2"></div>
@@ -69,5 +70,8 @@
 	         </div>
         </div>
     </div>
+    <footer>
+      <span>&copy; Persoo.cz 2016</span>
+    </footer>
 </body>
 </html>
