--- a/src/main/ch1-1-product-import/preprocessing.html
+++ b/src/main/ch1-1-product-import/preprocessing.html
@@ -43,7 +43,7 @@
             <div class="col-md-2" id="localNavigation">
                 <!--Sidebar content-->
             </div>
-            <div class="col-md-10">
+            <div class="col-md-10 content">
                 <!--Body content-->
                 <h1>Import preprocessing</h1>
 
