--- a/src/main/ch2-1-snippet/second.html
+++ b/src/main/ch2-1-snippet/second.html
@@ -21,9 +21,9 @@
             <div class="col-md-2" id="localNavigation">
                 <!--Sidebar content-->
             </div>
-            <div class="col-md-10">
+            <div class="col-md-10 content">
                 <!--Body content-->
-                
+
             </div>
         </div>
     </div>
