--- a/src/main/ch1-1-product-import/index.html
+++ b/src/main/ch1-1-product-import/index.html
@@ -42,7 +42,7 @@
             <div class="col-md-2" id="localNavigation">
                 <!--Sidebar content-->
             </div>
-            <div class="col-md-10">
+            <div class="col-md-10 content">
                 <!--Body content-->
                 <h1>Product Import</h1>
 
