--- a/src/main/ch2-1-snippet/index.html
+++ b/src/main/ch2-1-snippet/index.html
@@ -21,7 +21,7 @@
             <div class="col-md-2" id="localNavigation">
                 <!--Sidebar content-->
             </div>
-            <div class="col-md-10">
+            <div class="col-md-10 content">
                 <!--Body content-->
                 <h1>Installing persoo snippet</h1>
 
