--- a/src/main/demoTemplate/index.html
+++ b/src/main/demoTemplate/index.html
@@ -44,7 +44,7 @@
             <div class="col-md-2" id="localNavigation">
                 <!--Sidebar content-->
             </div>
-            <div class="col-md-10">
+            <div class="col-md-10 content">
                 <!--Body content-->
                 <h1>First page title</h1>
 
