--- a/src/main/eshop/index.html
+++ b/src/main/eshop/index.html
@@ -50,7 +50,7 @@
             <div class="col-md-2" id="localNavigation">
                 <!--Sidebar content-->
             </div>
-            <div class="col-md-10">
+            <div class="col-md-10 content">
                 <!--Body content-->
                 <h1>Homepage</h1>
 
