--- a/src/main/eshop/index.html
+++ b/src/main/eshop/index.html
@@ -75,8 +75,8 @@
 
         </div>
     </div>
-    <footer>
-      <span>&copy; Persoo.cz 2016</span>
+    <footer id="footerElement">
+
     </footer>
 </body>
 </html>
