--- a/src/main/how-to/index.html
+++ b/src/main/how-to/index.html
@@ -93,5 +93,8 @@
 
 	<!-- jQuery + Twitter Bootstrap + Persoo Demo Navigations + show debug console -->
 	<script src="../demo-all.js" type="text/javascript"></script>
+	<footer id="footerElement">
+
+	</footer>
 </body>
 </html>
