--- a/src/main/how-to/triggering.html
+++ b/src/main/how-to/triggering.html
@@ -115,5 +115,8 @@ persoo('onLoad', onLoadHandler1);
 
 	<!-- jQuery + Twitter Bootstrap + Persoo Demo Navigations + show debug console -->
 	<script src="../demo-all.js" type="text/javascript"></script>
+	<footer id="footerElement">
+
+	</footer>
 </body>
 </html>
