--- a/src/main/ch1-1-product-import/preprocessing.html
+++ b/src/main/ch1-1-product-import/preprocessing.html
@@ -60,14 +60,21 @@
                     small relation maps for hundreds of categories or productTypes.
                 </ul>
 
-                <div class="instructions zero">
-                  <h2>Instructions</h2>
-                  <ol>
-                    <li><div>1</div><div><span>Go to Settings - Imports and select "products" in the list.</span></div></li>
-                    <li><div>2</div><div><span>Open import preprocessing and write your javascript to extract teamName field from product title.</span></div></li>
-                    <li><div>3</div><div><span>On the wikipedia, you found all team names in 1st and 2nd league and write the following code to decide, whether product title contains some team name. Add this code to preprocessing function.</span></div></li>
-                  </ol>
-                </div>
+                <div class="row-fluid col2">
+                  <div class="col-md-6">
+                    <div class="instructions zero">
+                      <h2>Instructions</h2>
+                      <ol>
+                        <li><div>1</div><div><span>Go to Settings - Imports and select "products" in the list.</span></div></li>
+                        <li><div>2</div><div><span>Open import preprocessing and write your javascript to extract teamName field from product title.</span></div></li>
+                        <li><div>3</div><div><span>On the wikipedia, you found all team names in 1st and 2nd league and write the following code to decide, whether product title contains some team name. Add this code to preprocessing function.</span></div></li>
+                        <li><div>4</div><div><span>Go to import status and "Run" the import in the test environment.</span></div></li>
+                        <li><div>5</div><div><span>Click the import status to get destination URL with imported products.</span></div></li>
+                        <li><div>6</div><div><span>Open the link in new tab in your browser. Check, that there are products with the field 'teamName'.</span></div></li>
+                      </ol>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
                 <div class="row-fluid script zero">
                     <h2>Code</h2>
                     <pre>
@@ -212,16 +219,8 @@ var teamNames = [
    }
                       </pre>
                     </div>
-                    <div class="instructions zero">
-                      <ol>
-                        <li><div>4</div><div><span>Go to import status and "Run" the import in the test environment.</span></div></li>
-                        <li><div>5</div><div><span>Click the import status to get destination URL with imported products.</span></div></li>
-                        <li><div>6</div><div><span>Open the link in new tab in your browser. Check, that there are products with the field 'teamName'.</span></div></li>
-                      </ol>
-                    </div>
-
                     <div class="script zero" id="targetedActions" style="margin-bottom:40px;">
-                            <h2>One imported product is</h2>
+                        <h2>One imported product is</h2>
                         <pre id="oneSampleProduct"></pre>
                         <script>
                             productsDB.getSampleProduct(function (data) {
@@ -234,12 +233,14 @@ var teamNames = [
                             });
                         </script>
                     </div>
+                    </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <footer>
-      <span>&copy; Persoo.cz 2016</span>
+    <footer id="footerElement">
+
     </footer>
 </body>
 </html>
