--- a/src/main/demoTemplate/second.html
+++ b/src/main/demoTemplate/second.html
@@ -69,8 +69,8 @@
             </div>
         </div>
     </div>
-    <footer>
-      <span>&copy; Persoo.cz 2016</span>
+    <footer id="footerElement">
+
     </footer>
 </body>
 </html>
