--- a/src/main/eshop/category.html
+++ b/src/main/eshop/category.html
@@ -70,8 +70,8 @@
             </div>
         </div>
     </div>
-    <footer>
-      <span>&copy; Persoo.cz 2016</span>
+    <footer id="footerElement">
+
     </footer>
 </body>
 </html>
