--- a/src/main/index.html
+++ b/src/main/index.html
@@ -140,8 +140,8 @@ docCookies.setItem(APIKEY_COOKIE_NAME, apikey);
             </div>
         </div>
     </div>
-    <footer>
-      <span>&copy; Persoo.cz 2016</span>
+    <footer id="footerElement">
+
     </footer>
 </body>
 </html>
