--- a/src/main/ch1-1-product-import/index.html
+++ b/src/main/ch1-1-product-import/index.html
@@ -67,8 +67,10 @@
                         <li><div>7</div><div><span>Run import in production (go to Import status, and click "run" in production environment.</span></div></li>
                       </ol>
                     </div>
-                    <div id="accordion" role="tablist" aria-multiselectable="true">
+                    <div id="accordion" class="styleONE" role="tablist" aria-multiselectable="true">
+                    <h2>Instructions</h2>
   <div class="panel panel-default">
+    <div class="number">1</div>
     <div class="panel-heading" role="tab" id="headingOne">
       <h4 class="panel-title">
         <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -77,10 +79,11 @@
       </h4>
     </div>
     <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-      Go to Setting - imports and in the list select "products".
+      <span>Go to Setting - imports and in the list select "products".</span>
     </div>
   </div>
   <div class="panel panel-default">
+    <div class="number">2</div>
     <div class="panel-heading" role="tab" id="headingTwo">
       <h4 class="panel-title">
         <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
@@ -93,6 +96,7 @@
     </div>
   </div>
   <div class="panel panel-default">
+    <div class="number">3</div>
     <div class="panel-heading" role="tab" id="headingThree">
       <h4 class="panel-title">
         <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
