--- a/src/main/ch1-1-product-import/preprocessing.html
+++ b/src/main/ch1-1-product-import/preprocessing.html
@@ -65,175 +65,181 @@
                     <div class="instructions zero">
                       <h2>Instructions</h2>
                       <ol>
-                        <li><div>1</div><div><span>Go to Settings - Imports and select "products" in the list.</span></div></li>
-                        <li><div>2</div><div><span>Open import preprocessing and write your javascript to extract teamName field from product title.</span></div></li>
-                        <li><div>3</div><div><span>On the wikipedia, you found all team names in 1st and 2nd league and write the following code to decide, whether product title contains some team name. Add this code to preprocessing function.</span></div></li>
-                        <li><div>4</div><div><span>Go to import status and "Run" the import in the test environment.</span></div></li>
-                        <li><div>5</div><div><span>Click the import status to get destination URL with imported products.</span></div></li>
-                        <li><div>6</div><div><span>Open the link in new tab in your browser. Check, that there are products with the field 'teamName'.</span></div></li>
+                        <li>Go to Settings - Imports and select "products" in the list.</li>
+                        <li>Open import preprocessing and write your javascript to extract teamName field from product title.</li>
+                        <li>On the wikipedia, you found all team names in 1st and 2nd league and write the following code to decide,
+                            whether product title contains some team name. Add this code to preprocessing function.
+                            <br/><br/>
+                            <div class="panel panel-default">
+                              <div class="panel-heading" role="tab" id="headingOne">
+                                  <h4 class="panel-title"><a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+						            Javascript code with sample team names.
+						      </a></h4></div>
+						      <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+<textarea class="codeToCopyAndPaste">
+var teamNames = [
+	'Atlanta Hawks',
+	'Boston Celtics',
+	'Charlotte Bobcats',
+	'Chicago Bulls',
+	'Cleveland Cavaliers',
+	'Dallas Mavericks',
+	'Denver Nuggets',
+	'Detroit Pistons',
+	'Golden State Warriors',
+	'Houston Rockets',
+	'Indiana Pacers',
+	'Los Angeles Clippers',
+	'Los Angeles Lakers',
+	'Memphis Grizzlies',
+	'Vancouver Grizzlies',
+	'Miami Heat',
+	'Milwaukee Bucks',
+	'Minnesota Timberwolves',
+	'New Jersey Nets',
+	'New Orleans Hornets',
+	'New York Knicks',
+	'Oklahoma City Thunder',
+	'Orlando Magic',
+	'Philadelphia 76ers',
+	'Phoenix Suns',
+	'Portland Trail Blazers',
+	'Sacramento Kings',
+	'San Antonio Spurs',
+	'Seattle Sonics',
+	'Toronto Raptors',
+	'Utah Jazz',
+	'Washington Wizards',
+	
+	'Boston Bruins',
+	'Anaheim Ducks',
+	'Colorado Avalanche',
+	'St. Louis Blues',
+	'San Jose Sharks',
+	'Pittsburgh Penguins',
+	'Chicago Blackhawks',
+	'Tampa Bay Lightning',
+	'Montreal Canadiens',
+	'Los Angeles Kings',
+	'Minnesota Wild',
+	'New York Rangers',
+	'Philadelphia Flyers',
+	'Columbus Blue Jackets',
+	'Detroit Red Wings',
+	'Dallas Stars',
+	'Washington Capitals',
+	'Phoenix Coyotes',
+	'New Jersey Devils',
+	'Nashville Predators',
+	'Ottawa Senators',
+	'Toronto Maple Leafs',
+	'Winnipeg Jets',
+	'Carolina Hurricanes',
+	'Vancouver Canucks',
+	'New York Islanders',
+	'Calgary Flames',
+	'Edmonton Oilers',
+	'Florida Panthers',
+	'Buffalo Sabres',
+	
+	'Texas Longhorns',
+	'Boston College',
+	
+	'New York Yankees',
+	'Philadelphia Phillies',
+	'Boston Red Sox',
+	'Los Angeles Angels of Anaheim',
+	'Chicago White Sox',
+	'Chicago Cubs',
+	'New York Mets',
+	'San Francisco Giants',
+	'Minnesota Twins',
+	'Detroit Tigers',
+	'St. Louis Cardinals',
+	'Los Angeles Dodgers',
+	'Texas Rangers',
+	'Colorado Rockies',
+	'Atlanta Braves',
+	'Seattle Mariners',
+	'Milwaukee Brewers',
+	'Baltimore Orioles',
+	'Cincinnati Reds',
+	'Houston Astros',
+	'Oakland Athletics',
+	'Washington Nationals',
+	'Toronto Blue Jays',
+	'Miami Marlins',
+	'Arizona Diamondbacks',
+	'Cleveland Indians',
+	'San Diego Padres',
+	'Pittsburgh Pirates',
+	'Tampa Bay Rays',
+	'Kansas City Royals',
+	
+	'Baltimore Ravens',
+	'Buffalo Bills',
+	'Cincinnati Bengals',
+	'Cleveland Browns',
+	'Denver Broncos',
+	'Houston Texans',
+	'Indianapolis Colts',
+	'Jacksonville Jaguars',
+	'Kansas City Chiefs',
+	'Miami Dolphins',
+	'New England Patriots',
+	'New York Jets',
+	'Oakland Raiders',
+	'Pittsburgh Steelers',
+	'San Diego Chargers',
+	'Tennessee Titans',
+	'Arizona Cardinals',
+	'Atlanta Falcons',
+	'Carolina Panthers',
+	'Chicago Bears',
+	'Dallas Cowboys',
+	'Detroit Lions',
+	'Green Bay Packers',
+	'Minnesota Vikings',
+	'New Orleans Saints',
+	'New York Giants',
+	'Philadelphia Eagles',
+	'San Francisco 49ers',
+	'Seattle Seahawks',
+	'St. Louis Rams',
+	'Tampa Bay Buccaneers',
+	'Washington Redskins'
+];
+
+for (var i=0;i<teamNames.length;i++) {
+    var phrase = teamNames[i];
+    if (item.title.toLowerCase().indexOf(phrase.toLowerCase()) >= 0){
+        item.teamName = phrase;
+    }
+}
+</textarea>    
+						      </div>
+						    </div>
+                        </li>
+                        <li>Go to import status and "Run" the import in the test environment.</li>
+                        <li>Click the import status to get destination URL with imported products.</li>
+                        <li>Open the link in new tab in your browser. Check, that there are products with the field 'teamName'.</li>
                       </ol>
                     </div>
                   </div>
                   <div class="col-md-6">
-                <div class="row-fluid script zero">
-                    <h2>Code</h2>
-                    <pre>
-var teamNames = [
-'Atlanta Hawks',
-'Boston Celtics',
-'Charlotte Bobcats',
-'Chicago Bulls',
-'Cleveland Cavaliers',
-'Dallas Mavericks',
-'Denver Nuggets',
-'Detroit Pistons',
-'Golden State Warriors',
-'Houston Rockets',
-'Indiana Pacers',
-'Los Angeles Clippers',
-'Los Angeles Lakers',
-'Memphis Grizzlies',
-'Vancouver Grizzlies',
-'Miami Heat',
-'Milwaukee Bucks',
-'Minnesota Timberwolves',
-'New Jersey Nets',
-'New Orleans Hornets',
-'New York Knicks',
-'Oklahoma City Thunder',
-'Orlando Magic',
-'Philadelphia 76ers',
-'Phoenix Suns',
-'Portland Trail Blazers',
-'Sacramento Kings',
-'San Antonio Spurs',
-'Seattle Sonics',
-'Toronto Raptors',
-'Utah Jazz',
-'Washington Wizards',
-
-'Boston Bruins',
-'Anaheim Ducks',
-'Colorado Avalanche',
-'St. Louis Blues',
-'San Jose Sharks',
-'Pittsburgh Penguins',
-'Chicago Blackhawks',
-'Tampa Bay Lightning',
-'Montreal Canadiens',
-'Los Angeles Kings',
-'Minnesota Wild',
-'New York Rangers',
-'Philadelphia Flyers',
-'Columbus Blue Jackets',
-'Detroit Red Wings',
-'Dallas Stars',
-'Washington Capitals',
-'Phoenix Coyotes',
-'New Jersey Devils',
-'Nashville Predators',
-'Ottawa Senators',
-'Toronto Maple Leafs',
-'Winnipeg Jets',
-'Carolina Hurricanes',
-'Vancouver Canucks',
-'New York Islanders',
-'Calgary Flames',
-'Edmonton Oilers',
-'Florida Panthers',
-'Buffalo Sabres',
-
-'Texas Longhorns',
-'Boston College',
-
-'New York Yankees',
-'Philadelphia Phillies',
-'Boston Red Sox',
-'Los Angeles Angels of Anaheim',
-'Chicago White Sox',
-'Chicago Cubs',
-'New York Mets',
-'San Francisco Giants',
-'Minnesota Twins',
-'Detroit Tigers',
-'St. Louis Cardinals',
-'Los Angeles Dodgers',
-'Texas Rangers',
-'Colorado Rockies',
-'Atlanta Braves',
-'Seattle Mariners',
-'Milwaukee Brewers',
-'Baltimore Orioles',
-'Cincinnati Reds',
-'Houston Astros',
-'Oakland Athletics',
-'Washington Nationals',
-'Toronto Blue Jays',
-'Miami Marlins',
-'Arizona Diamondbacks',
-'Cleveland Indians',
-'San Diego Padres',
-'Pittsburgh Pirates',
-'Tampa Bay Rays',
-'Kansas City Royals',
-
-'Baltimore Ravens',
-'Buffalo Bills',
-'Cincinnati Bengals',
-'Cleveland Browns',
-'Denver Broncos',
-'Houston Texans',
-'Indianapolis Colts',
-'Jacksonville Jaguars',
-'Kansas City Chiefs',
-'Miami Dolphins',
-'New England Patriots',
-'New York Jets',
-'Oakland Raiders',
-'Pittsburgh Steelers',
-'San Diego Chargers',
-'Tennessee Titans',
-'Arizona Cardinals',
-'Atlanta Falcons',
-'Carolina Panthers',
-'Chicago Bears',
-'Dallas Cowboys',
-'Detroit Lions',
-'Green Bay Packers',
-'Minnesota Vikings',
-'New Orleans Saints',
-'New York Giants',
-'Philadelphia Eagles',
-'San Francisco 49ers',
-'Seattle Seahawks',
-'St. Louis Rams',
-'Tampa Bay Buccaneers',
-'Washington Redskins'
-                    ];
-
-   for (var i=0;i<teamNames.length;i++) {
-       var phrase = teamNames[i];
-       if (item.title.toLowerCase().indexOf(phrase.toLowerCase()) >= 0){
-           item.teamName = phrase;
-       }
-   }
-                      </pre>
-                    </div>
-                    <div class="script zero" id="targetedActions" style="margin-bottom:40px;">
-                        <h2>One imported product is</h2>
+                     <div class="row-fluid preview">
+                        <h2>Preview</h2>
                         <pre id="oneSampleProduct"></pre>
                         <script>
                             productsDB.getSampleProduct(function (data) {
                                 var elem = document.getElementById('oneSampleProduct');
                                 if (data) {
-                                	elem.innerHTML = JSON.stringify(data, false, 4);
+                                	elem.innerHTML = "One imported product is " + JSON.stringify(data, false, 4);
                                 } else {
                                     elem.innerHTML = 'You do not have any product in your Persoo account yet. Import one using instructions on the left.'
                                 }
                             });
                         </script>
-                    </div>
-                    </div>
                     </div>
                 </div>
             </div>
