--- a/src/main/ch2-1-snippet/index.html
+++ b/src/main/ch2-1-snippet/index.html
@@ -31,9 +31,9 @@
                 <div class="instructions">
                   <h2>Instructions</h2>
                   <ol>
-  	                <li><div>1</div><div><span>Go to Settings - installation and copy javascript snippet to page header.</span></div></li>
-  	                <li><div>2</div><div><span>Open chrome console. Type <code>persoo</code> to chech, that persoo object is loaded.</span></div></li>
-  	                <li><div>3</div><div><span>Open persoo console by adding ?persooAdminBar=1 to url.</span></div></li>
+  	                <li>Go to Settings - installation and copy javascript snippet to page header.</li>
+  	                <li>Open chrome console. Type <code>persoo</code> to chech, that persoo object is loaded.</li>
+  	                <li>Open persoo console by adding ?persooAdminBar=1 to url.</li>
                   </ol>
                 </div>
             </div>
